# src/generated/swagger.json
@@ -632,55 +632,9 @@
 				"parameters": []
 			}
 		},
-		"/api/manager/products/{id}/approve": {
+		"/api/manager/products/{id}/status": {
 			"patch": {
-				"operationId": "ApproveProduct",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"properties": {
-										"message": {
-											"type": "string"
-										}
-									},
-									"required": [
-										"message"
-									],
-									"type": "object"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Manager"
-				],
-				"security": [
-					{
-						"jwt": [
-							"manager",
-							"superadmin"
-						]
-					}
-				],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "id",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
-			}
-		},
-		"/api/manager/products/{id}/reject": {
-			"patch": {
-				"operationId": "RejectProduct",
+				"operationId": "UpdateProductStatus",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -728,10 +682,13 @@
 						"application/json": {
 							"schema": {
 								"properties": {
-									"reason": {
-										"type": "string"
+									"status": {
+										"$ref": "#/components/schemas/ProductStatus"
 									}
 								},
+								"required": [
+									"status"
+								],
 								"type": "object"
 							}
 						}
